src/test/ui/async-await/issue-64130-non-send-future-diags.stderr
error[E0277]: `std::sync::MutexGuard<'_, u32>` cannot be sent between threads safely
  --> $DIR/issue-64130-non-send-future-diags.rs:23:5
   |
LL | fn is_send<T: Send>(t: T) {
   |    -------    ---- required by this bound in `is_send`
...
LL |     is_send(foo());
   |     ^^^^^^^ `std::sync::MutexGuard<'_, u32>` cannot be sent between threads safely
   |
   = help: within `impl std::future::Future`, the trait `std::marker::Send` is not implemented for `std::sync::MutexGuard<'_, u32>`
note: future does not implement `std::marker::Send` as this value is used across an await
  --> $DIR/issue-64130-non-send-future-diags.rs:15:5
   |
LL |     let g = x.lock().unwrap();
   |         - has type `std::sync::MutexGuard<'_, u32>`
LL |     baz().await;
   |     ^^^^^^^^^^^ await occurs here, with `g` maybe used later
LL | }
   | - `g` is later dropped here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
